# rionid

./: 404.html  CITATION.cff  README.md  canvas.py  canvasformat.py  clean_and_push.sh  creategui.py  dataE143.py  environment.yml  importdata.py  index.html  inputparams.py  installation.sh  lifetime.py  mkdocs.yml  pypeaks.py  pyproject.toml  pysimtof.py  requirements.txt  scalars.py  setup.cfg  setup.py  simtof.cxx  simtof.py  sitemap.xml
.devcontainer/: devcontainer.json  devcontainer.yml
.github/workflows/: ci.yml  deploy.yml  publish.yml
data/: 245-j  245-m  410-j  410-m  E143_TEline-ESR-72Ge.lpp  InputParameters.txt  mass.rd
docs/: __main__.md  creategui.md  importdata.md  index.md  mkdocs.yml
docs/.ipynb_checkpoints/: __main__-checkpoint.md
docs/prerionid/: __main__.md  datacrunch.md  e0018.md  psdata.md  watcher.md
docs/rionid/: __main__.md  creategui.md  importdata.md  inputtools.md  pypeaks.md  pyqtgraphgui.md
docs/rionidgui/: __main__.md  gui.md  gui_controller.md  parameter_gui.md
flowchart/: CSRe_Schottky_DAQ_Analysis.drawio  rionid.drawio  rionid.drawio.pdf:Zone.Identifier
notebooks/: test_prerionid.ipynb
prerionid/: __main__.py  datacrunch.py  datacrunch.toml  e0018.py  psdata.py  requirements.txt  watcher.py
prerionid/__main__/: index.html
prerionid/datacrunch/: index.html
prerionid/e0018/: index.html
prerionid/psdata/: index.html
prerionid/watcher/: index.html
pysimtof/: __init__.py  __main__.py  creategui.py  importdata.py  psdata.py  pypeaks.py  version.py
rionid/: __init__.py  __main__.py  creategui.py  gui.py  harmonics_simulation.ipynb  importdata.py  inouttools.py  pypeaks.py  pyqtgraphgui.py  requirements.txt  version.py
rionid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
rionid/.ipynb_checkpoints/: creategui-checkpoint.py  importdata-checkpoint.py  pyqtgraphgui-checkpoint.py
rionid/__main__/: index.html
rionid/creategui/: index.html
rionid/importdata/: index.html
rionid/inputtools/: index.html
rionid/pypeaks/: index.html
rionid/pyqtgraphgui/: index.html
rionidgui/: CITATION.cff  gui.py  gui_controller.py  parameter_gui.py  requirements.txt
rionidgui/.ipynb_checkpoints/: gui-checkpoint.py  gui_controller-checkpoint.py  parameter_gui-checkpoint.py
rionidgui/__main__/: index.html
rionidgui/gui/: index.html
rionidgui/gui_controller/: index.html
rionidgui/parameter_gui/: index.html
search/: search_index.json
tests/: example.lpp  test_data.lpp.gpg  test_importdata.py  test_importdata.toml
