[tool.poetry]
name = "RionID"
version = "0.0.0" 
description = "Ring-stored ion IDentification"
authors = ["DFreireF"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://dfreiref.github.io/rionid/"
repository = "https://github.com/DFreireF/rionid"
keywords = ["Physics", "Data", "Time series", "Data analysis"]

packages = [
    { include = "rionid" },
    { include = "prerionid" },
    { include = "rionidgui" }
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = ["rionid/version.py"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
scipy = "*"
matplotlib = "*"
beautifulsoup4 = "*"
nibabel = "*"
npTDMS = "*"
pyTDMS = "*"
uproot3 = "*"
uproot3-methods = "*"
fortranformat = "*"
ezodf = "*"
loguru = "*"
PyQt5 = "*"
pyqtgraph = "*"
toml = "*"
watchdog = "*"
# Git dependencies (fetched from GitHub)
iqtools = { git = "https://github.com/xaratustrah/iqtools.git", rev = "master" }
barion = { git = "https://github.com/xaratustrah/barion.git", rev = "master" }
lisereader = { git = "https://github.com/gwgwhc/lisereader.git", rev = "master" }

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
ipython = "*"

[tool.poetry.scripts]
rionid = "rionid.__main__:main"
rionidgui = "rionidgui.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"